[gd_scene load_steps=11 format=3 uid="uid://b1d1q4s4fbegc"]

[ext_resource type="Script" path="res://Towers/Script/Modular_Tower_Logic.gd" id="1_l0c3s"]
[ext_resource type="PackedScene" uid="uid://d2un723p3oo5p" path="res://Towers/projectiles/bubble.tscn" id="2_36q7b"]
[ext_resource type="Script" path="res://Towers/Upgrade.gd" id="3_1y6ht"]
[ext_resource type="Texture2D" uid="uid://8wjh2v48lmpu" path="res://Game_Assets/Asesprite_Bowz/Axolotl.png" id="3_fvdhb"]
[ext_resource type="Texture2D" uid="uid://bepdqiexjr0gr" path="res://Game_Assets/range_overlay.png" id="4_ky8cy"]
[ext_resource type="Theme" uid="uid://mhdwkcecl1i4" path="res://Presets/Fantasy_theme.tres" id="5_jpt5p"]

[sub_resource type="CircleShape2D" id="CircleShape2D_i4ii7"]
radius = 56.0357

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6hein"]
size = Vector2(18, 18)

[sub_resource type="Animation" id="Animation_l5442"]
resource_name = "open"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7asdj"]
_data = {
"open": SubResource("Animation_l5442")
}

[node name="Axolotl" type="Node2D" node_paths=PackedStringArray("ray_cast", "collision_shape", "UpgradeAP") groups=["turret"]]
process_mode = 1
script = ExtResource("1_l0c3s")
ray_cast = NodePath("RayCast2D")
type = "Axolotl_6"
collision_shape = NodePath("Range/CollisionShape2D")
UpgradeAP = NodePath("UpgradeMenue")
enemy_priority = "pick_random"
munition = ExtResource("2_36q7b")
damage_type = "munition"

[node name="Upgrade" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
script = ExtResource("3_1y6ht")

[node name="Range_Overlay" type="Sprite2D" parent="Upgrade"]
modulate = Color(0.184314, 0.8, 0.262745, 0.368627)
texture = ExtResource("4_ky8cy")

[node name="Upgrade_DMG" type="Button" parent="Upgrade"]
offset_left = 16.0
offset_top = -14.0
offset_right = 173.0
offset_bottom = 46.0
scale = Vector2(0.5, 0.5)
text = "Upgrade DMG"

[node name="Sell" type="Button" parent="Upgrade"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.0
offset_top = 26.0
offset_right = 119.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
text = "Sell
"

[node name="Upgrade_ROF" type="Button" parent="Upgrade"]
layout_mode = 0
offset_left = -66.0
offset_top = -8.0
offset_right = -26.0
offset_bottom = 23.0
scale = Vector2(0.5, 0.5)
text = "ROF"

[node name="VBoxContainer" type="VBoxContainer" parent="Upgrade"]
offset_left = -22.0
offset_top = -60.0
offset_right = 27.0
offset_bottom = -20.0
theme = ExtResource("5_jpt5p")

[node name="DMGLabel" type="Label" parent="Upgrade/VBoxContainer"]
layout_mode = 2
text = "DMG: 0
"

[node name="RofLabel" type="Label" parent="Upgrade/VBoxContainer"]
layout_mode = 2
text = "ROF: 0
"

[node name="SellPriceLabel" type="Label" parent="Upgrade/VBoxContainer"]
layout_mode = 2
text = "SellPrice: 0
"

[node name="TowerSprite" type="Sprite2D" parent="."]
texture = ExtResource("3_fvdhb")

[node name="Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource("CircleShape2D_i4ii7")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 8)

[node name="Mouse_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mouse_area"]
shape = SubResource("RectangleShape2D_6hein")
debug_color = Color(0.792157, 0.427451, 0, 0)

[node name="UpgradeMenue" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7asdj")
}

[connection signal="pressed" from="Upgrade/Upgrade_DMG" to="Upgrade" method="Upgrade_DMG" binds= [1.1, 10]]
[connection signal="pressed" from="Upgrade/Sell" to="Upgrade" method="Sell_Tower"]
[connection signal="pressed" from="Upgrade/Upgrade_ROF" to="Upgrade" method="Upgrade_ROF" binds= [1.0, 10.0]]
[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
[connection signal="input_event" from="Mouse_area" to="." method="_on_mouse_area_input_event"]
[connection signal="mouse_entered" from="Mouse_area" to="." method="_on_mouse_area_mouse_entered"]
[connection signal="mouse_exited" from="Mouse_area" to="." method="_on_mouse_area_mouse_exited"]
